# ML-ZoomCamp-Capstone-project-3

./: README.md  dockerfile  main.py  predict.py  pyproject.toml  train.py
02 Notebook/: Notebook.ipynb
